--- a/advent2017.cabal
+++ b/advent2017.cabal
@@ -19,6 +19,8 @@ library
   build-depends:       base >= 4.7 && < 5
                      , mtl
                      , split
+                     , heredoc
+                     , text
   default-language:    Haskell2010
 
 executable advent2017
