Parsec-built reader for advent 7 input.

--- a/advent2017.cabal
+++ b/advent2017.cabal
@@ -22,6 +22,7 @@ library
                      , split
                      , heredoc
                      , text
+                     , parsec
   default-language:    Haskell2010
 
 executable advent2017
